--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -9,3 +9,13 @@ body{
     color: #1B4332;
     font-weight: 400;
 }
+
+@keyframes progress {
+    0% {
+        width: 100%;
+    }
+    100% {
+        width: 0%;
+    }
+    
+}
