--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -18,4 +18,18 @@ body{
         width: 0%;
     }
     
+
 }
+.player-showcase-container:nth-child(1) {
+    margin-left: 3em;
+  }
+  .current-player-inicator {
+    transition: 500ms;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: var(--color-1);
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    border-radius: 30px;
+  }
